<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/encontrar_amigos_info"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/dashed_border_bg"
        android:padding="15dp"
        />
    
    <com.facebook.widget.LoginButton
        android:id="@+id/authButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:visibility="gone"
        />
    
    <Button 
        android:id="@+id/facebook_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/facebook_button"
        android:text="@string/encontrar_amigos_facebook"
        android:layout_margin="20dp"
        android:drawableLeft="@drawable/facebook_badge"
        />
        
    <Button 
        android:id="@+id/gplus_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/gplus_button"
        android:text="@string/encontrar_amigos_gPlus"
        android:layout_margin="20dp"
        android:drawableLeft="@drawable/gplus_badge"
        />

</LinearLayout>
