<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
    <LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:orientation="vertical" >
	    
	    <TextView 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        style="@style/title_center"
	        android:text="@string/iniciar_sesion"
	        />
	    
	    <EditText 
	        android:id="@+id/email"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:hint="@string/correo_electronico"
	        android:inputType="textEmailAddress"
	        android:layout_marginLeft="20dp"
	        android:layout_marginRight="20dp"
	        android:paddingTop="10dp"
	        android:paddingBottom="10dp"
	        />
	    
	    <EditText 
	        android:id="@+id/password"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:inputType="textPassword"
	        android:hint="@string/constrasena"
	        android:layout_marginLeft="20dp"
	        android:layout_marginRight="20dp"
	        android:paddingTop="10dp"
	        android:paddingBottom="10dp"
	        />
	    
	    <TextView 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/contrasena_olvidada"
	        android:textColor="@color/woopit_dark_blue"
	        android:gravity="center"
	        android:paddingTop="10dp"
	        android:paddingBottom="10dp"
	        />
	    
	    <com.facebook.widget.LoginButton
	        android:id="@+id/authButton"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_horizontal"
	        android:layout_marginTop="30dp"
	        />
	    
	    <com.google.android.gms.common.SignInButton
		    android:id="@+id/sign_in_button"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
	        android:layout_gravity="center_horizontal"
	        android:layout_marginTop="30dp"
		    />
	    
	</LinearLayout>
    
    <Button 
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        style="@style/big_button"
        android:layout_alignParentBottom="true"
        android:text="@string/iniciar_sesion"
        />
    
</RelativeLayout>