<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:orientation="vertical"
        android:background="#f7fef7"
        android:id="@+id/previewCanvas"
        >
    </LinearLayout>
    <TextView
        android:id="@+id/enviarA"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:background="#f7fef7"
        android:text="@string/enviar_a"
        >
        
    </TextView>
    <LinearLayout  
        android:layout_height="0dp" 
        android:layout_weight="1"
        android:layout_width="match_parent"
		
        android:orientation="horizontal">
        
        <Button 
            android:layout_width="fill_parent"
        android:layout_height="match_parent"
	    android:text="@string/enviar_mapa"
	    android:textAllCaps="true"
        android:background="@color/woopit_light_blue"
        android:textColor="#fff"
        android:textSize="@dimen/big_text"
        android:onClick="goLogin"
        android:layout_weight="1"
	    />
	
	<Button 
	    android:layout_width="fill_parent"
	    android:layout_height="match_parent"
	    android:text="@string/enviar_actual"
	    android:textAllCaps="true"
        android:background="@color/woopit_orange"
        android:textColor="#fff"
        android:textSize="@dimen/big_text"
        android:onClick="goSignup"
        android:layout_weight="1"
	    /></LinearLayout>
	
    
</LinearLayout>
