<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#fff" >


    <RelativeLayout 
        android:layout_width="match_parent"
        android:layout_height="50dp"
        style="@style/top_bar">

        <TextView 
            android:id="@+id/title"
	        android:layout_width="wrap_content"
	        android:layout_height="match_parent"
	        android:text="@string/lista_de_modelos"
	        android:layout_alignParentLeft="true"
	        style="@style/back_button"
	        />
        
        <ImageView 
            android:layout_width="wrap_content"
			android:layout_height="match_parent"
            style="@style/find_friends_button"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            />
        
    </RelativeLayout>

    <EditText 
        android:id="@+id/search_models"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/buscar_modelos"
        android:imeOptions="actionSearch"
		android:singleLine="true"
        android:drawableLeft="@drawable/search"
        android:drawablePadding="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        />
    <ProgressBar 
        android:id="@+id/loaderModel"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_gravity="center"
        style="@style/progress_bar"
        android:layout_margin="15dp"
        />
    <ImageView 
		android:id="@+id/notSignalImage"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:src="@drawable/notsignal"
		android:visibility="gone"
		android:layout_marginTop="50dp"
	 	/>
       
    <TextView
	    android:id="@+id/reload_button"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/notificacion_woopit_sin_senal"
	    android:visibility="gone" 
	    android:layout_gravity="center"
	    android:layout_margin="20dp"
	    android:textColor="#d3d3d3"
	    android:gravity="center_horizontal"
    	/>
    <ListView 
        android:id="@+id/models_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:divider="@null"
	    android:gravity="center"
        />
    
</LinearLayout>