<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/sliding_menu_bg" >
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:clickable="true"
        android:onClick="goMyProfile"
        android:background="#fafafa"
		android:paddingTop="10dp"
		android:paddingBottom="10dp"
		android:gravity="center"
        >
        
        <ImageView 
			android:id="@+id/image"
			android:layout_width="70dp"
			android:layout_height="70dp"
			style="@style/profile_image"
			/>
        
		<TextView 
			android:id="@+id/name"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textSize="@dimen/normal_text"
			android:textStyle="bold"
			android:singleLine="true"
			android:ellipsize="end"
			/>
		
		<TextView 
			android:id="@+id/username"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textSize="@dimen/normal_text"
			android:textColor="@color/woopit_green"
			android:singleLine="true"
			android:ellipsize="end"
			/>
	        
    </LinearLayout>
    
    <View 
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#f8f8f6"
        />
    
    <ScrollView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            
            <TextView 
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:padding="16dp"
				android:textSize="@dimen/normal_text"
		        android:text="@string/editar_perfil"
		        android:drawableLeft="@drawable/sliding_edit_profile"
		        android:drawablePadding="20dp"
		        android:clickable="true"
		        android:background="@drawable/menu_item_bg"
		        android:layout_marginLeft="4dp"
		        android:layout_marginRight="4dp"
		        android:onClick="goEditProfile"
		        />
            
            <View 
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#f6f6f8"
                />
            
		    <TextView 
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:padding="16dp"
				android:textSize="@dimen/normal_text"
		        android:text="@string/comprar_monedas"
		        android:drawableLeft="@drawable/sliding_buy_coins"
		        android:drawablePadding="20dp"
		        android:clickable="true"
		        android:background="@drawable/menu_item_bg"
		        android:layout_marginLeft="4dp"
		        android:layout_marginRight="4dp"
		        android:onClick="goBuyCoins"
		        />
		    
            <View 
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#f6f6f8"
                />
            
		    <TextView 
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:padding="16dp"
				android:textSize="@dimen/normal_text"
		        android:text="@string/compartir_woopit"
		        android:drawableLeft="@drawable/sliding_share"
		        android:drawablePadding="20dp"
		        android:clickable="true"
		        android:background="@drawable/menu_item_bg"
		        android:layout_marginLeft="4dp"
		        android:layout_marginRight="4dp"
		        android:onClick="shareWoopit"
		        />
		    
            <View 
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#f6f6f8"
                />
            
		    <TextView 
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:padding="16dp"
				android:textSize="@dimen/normal_text"
		        android:text="@string/enviar_comentarios"
		        android:drawableLeft="@drawable/sliding_feedback"
		        android:drawablePadding="20dp"
		        android:clickable="true"
		        android:background="@drawable/menu_item_bg"
		        android:layout_marginLeft="4dp"
		        android:layout_marginRight="4dp"
		        android:onClick="sendFeedback"
		        />
		            
            <View 
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#f6f6f8"
                />
            
            <TextView 
                android:id="@+id/tips"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_margin="20dp"
		        android:padding="10dp"
		        android:background="@drawable/dashed_border_bg_blue"
		        android:textSize="@dimen/small_text"
		        android:gravity="center"
		        />
            
        </LinearLayout>
        
    </ScrollView>

</LinearLayout>
